force-app/main/default/objects/BusinessLicenseApplication/fields/Applicant_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Applicant_First_Name__c</fullName>
    <formula>Owner:User.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Applicant First Name</label>
    <type>Text</type>
</CustomField>