force-app/main/default/objects/BusinessLicenseApplication/fields/Application_Background_Personal_History__c.field-meta.xml
<CustomField>
    <fullName>Application_Background_Personal_History__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Application-Background/Personal History</label>
    <type>Checkbox</type>
</CustomField>