force-app/main/default/objects/BusinessLicenseApplication/fields/Application_pre_requisites_met__c.field-meta.xml
<CustomField>
    <fullName>Application_pre_requisites_met__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Application pre-requisites met</label>
    <type>Checkbox</type>
</CustomField>