force-app/main/default/objects/BusinessLicenseApplication/fields/Application_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Application_Start_Date__c</fullName>
    <label>Application Start Date</label>
    <type>Date</type>
</CustomField>