force-app/main/default/objects/BusinessLicenseApplication/fields/Application_Submission_Payment_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Application_Submission_Payment_Deadline__c</fullName>
    <label>Application Submission Payment Deadline</label>
    <type>Date</type>
</CustomField>