force-app/main/default/objects/BusinessLicenseApplication/fields/Appointment_of_Director_as_Agent__c.field-meta.xml
<CustomField>
    <fullName>Appointment_of_Director_as_Agent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Appointment of Director as Agent</label>
    <type>Checkbox</type>
</CustomField>