force-app/main/default/objects/BusinessLicenseApplication/fields/Authorization_to_release_Financial_Info__c.field-meta.xml
<CustomField>
    <fullName>Authorization_to_release_Financial_Info__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Authorization to release Financial Info</label>
    <type>Checkbox</type>
</CustomField>