force-app/main/default/objects/BusinessLicenseApplication/fields/Autobroker_Endorsement_Attached_Provided__c.field-meta.xml
<CustomField>
    <fullName>Autobroker_Endorsement_Attached_Provided__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Autobroker Endorsement Attached/Provided</label>
    <type>Checkbox</type>
</CustomField>