force-app/main/default/objects/BusinessLicenseApplication/fields/Background_Check_DMV__c.field-meta.xml
<CustomField>
    <fullName>Background_Check_DMV__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Background Check-DMV</label>
    <type>Checkbox</type>
</CustomField>