force-app/main/default/objects/BusinessLicenseApplication/fields/Business_Account_Information__c.field-meta.xml
<CustomField>
    <fullName>Business_Account_Information__c</fullName>
    <label>Business Account Information</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Start</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>