force-app/main/default/objects/BusinessLicenseApplication/fields/CADMV_BuildingArea__c.field-meta.xml
<CustomField>
    <fullName>CADMV_BuildingArea__c</fullName>
    <label>Approximate Building Area</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>