force-app/main/default/objects/BusinessLicenseApplication/fields/CADMV_BusinessAddress__c.field-meta.xml
<CustomField>
    <fullName>CADMV_BusinessAddress__c</fullName>
    <formula>SiteStreet + &apos;, &apos; + SiteCity + &apos;, &apos; + SiteState + &apos;, &apos; + SitePostalCode + &apos; &apos; + SiteCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Address</label>
    <type>Text</type>
</CustomField>