force-app/main/default/objects/BusinessLicenseApplication/fields/CADMV_BusinessLicenseDateValidation__c.field-meta.xml
<CustomField>
    <fullName>CADMV_BusinessLicenseDateValidation__c</fullName>
    <formula>NOW() - CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business License Date Validation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>