force-app/main/default/objects/BusinessLicenseApplication/fields/CADMV_DisplayArea__c.field-meta.xml
<CustomField>
    <fullName>CADMV_DisplayArea__c</fullName>
    <label>Approximate Display Area</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>