force-app/main/default/objects/BusinessLicenseApplication/fields/CADMV_InstructionsgivenatLocation__c.field-meta.xml
<CustomField>
    <fullName>CADMV_InstructionsgivenatLocation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Instructions given at Location</label>
    <type>Checkbox</type>
</CustomField>