force-app/main/default/objects/BusinessLicenseApplication/fields/CADMV_IsDocDownloaded__c.field-meta.xml
<CustomField>
    <fullName>CADMV_IsDocDownloaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Document Downloaded</label>
    <type>Checkbox</type>
</CustomField>