force-app/main/default/objects/BusinessLicenseApplication/fields/CADMV_LeaseRentalEndDate__c.field-meta.xml
<CustomField>
    <fullName>CADMV_LeaseRentalEndDate__c</fullName>
    <label>Lease or Rental Period End Date</label>
    <type>Date</type>
</CustomField>