force-app/main/default/objects/BusinessLicenseApplication/fields/CADMV_LeaseRentalStartDate__c.field-meta.xml
<CustomField>
    <fullName>CADMV_LeaseRentalStartDate__c</fullName>
    <label>Lease or Rental Period Start Date</label>
    <type>Date</type>
</CustomField>