force-app/main/default/objects/BusinessLicenseApplication/fields/CADMV_LicenseTypeName__c.field-meta.xml
<CustomField>
    <fullName>CADMV_LicenseTypeName__c</fullName>
    <label>License Type Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>