force-app/main/default/objects/BusinessLicenseApplication/fields/CADMV_MeetsPropertyUseRequirements__c.field-meta.xml
<CustomField>
    <fullName>CADMV_MeetsPropertyUseRequirements__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Locations Meet Property Use Requirements</label>
    <type>Checkbox</type>
</CustomField>