force-app/main/default/objects/BusinessLicenseApplication/fields/CADMV_NewVehicles__c.field-meta.xml
<CustomField>
    <fullName>CADMV_NewVehicles__c</fullName>
    <label>New Vehicle Types</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Automobile/Commercial</fullName>
            </value>
            <value>
                <fullName>Motorcycle</fullName>
            </value>
            <value>
                <fullName>All-Terrain Vehicle</fullName>
            </value>
            <value>
                <fullName>Motorhome</fullName>
            </value>
            <value>
                <fullName>Recreational Trailer</fullName>
            </value>
            <value>
                <fullName>Trailer</fullName>
            </value>
            <value>
                <fullName>Snowmobile</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>