force-app/main/default/objects/BusinessLicenseApplication/fields/CADMV_OfficeArea__c.field-meta.xml
<CustomField>
    <fullName>CADMV_OfficeArea__c</fullName>
    <label>Approximate Office Area</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>