force-app/main/default/objects/BusinessLicenseApplication/fields/CADMV_OfficeCloseTime__c.field-meta.xml
<CustomField>
    <fullName>CADMV_OfficeCloseTime__c</fullName>
    <label>Office Close Time</label>
    <type>Time</type>
</CustomField>