force-app/main/default/objects/BusinessLicenseApplication/fields/CADMV_OfficeOpenDays__c.field-meta.xml
<CustomField>
    <fullName>CADMV_OfficeOpenDays__c</fullName>
    <label>Office Open Days</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Monday</fullName>
            </value>
            <value>
                <fullName>Tuesday</fullName>
            </value>
            <value>
                <fullName>Wednesday</fullName>
            </value>
            <value>
                <fullName>Thursday</fullName>
            </value>
            <value>
                <fullName>Friday</fullName>
            </value>
            <value>
                <fullName>Saturday</fullName>
            </value>
            <value>
                <fullName>Sunday</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>