force-app/main/default/objects/BusinessLicenseApplication/fields/CADMV_OfficeOpenTime__c.field-meta.xml
<CustomField>
    <fullName>CADMV_OfficeOpenTime__c</fullName>
    <label>Office Open Time</label>
    <type>Time</type>
</CustomField>