force-app/main/default/objects/BusinessLicenseApplication/fields/CADMV_OperatorAddress__c.field-meta.xml
<CustomField>
    <fullName>CADMV_OperatorAddress__c</fullName>
    <formula>IF(NOT(ISBLANK( CADMV_OperatorStreet__c )), CADMV_OperatorStreet__c &amp; 
BR()
&amp; CADMV_OperatorCity__c &amp;&quot;, &quot;&amp;TEXT( CADMV_OperatorState__c)&amp;&quot; &quot;&amp; CADMV_OperatorZipcode__c ,&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Operator Address</label>
    <type>Text</type>
</CustomField>