force-app/main/default/objects/BusinessLicenseApplication/fields/CADMV_OperatorCity__c.field-meta.xml
<CustomField>
    <fullName>CADMV_OperatorCity__c</fullName>
    <label>Operator City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>