force-app/main/default/objects/BusinessLicenseApplication/fields/CADMV_OperatorName__c.field-meta.xml
<CustomField>
    <fullName>CADMV_OperatorName__c</fullName>
    <label>Operator Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>