force-app/main/default/objects/BusinessLicenseApplication/fields/CADMV_OperatorPhone__c.field-meta.xml
<CustomField>
    <fullName>CADMV_OperatorPhone__c</fullName>
    <label>Operator Phone</label>
    <type>Phone</type>
</CustomField>