force-app/main/default/objects/BusinessLicenseApplication/fields/CADMV_OperatorState__c.field-meta.xml
<CustomField>
    <fullName>CADMV_OperatorState__c</fullName>
    <label>Operator State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>vlocity_ins__State</valueSetName>
    </valueSet>
</CustomField>