force-app/main/default/objects/BusinessLicenseApplication/fields/CADMV_OperatorStreet__c.field-meta.xml
<CustomField>
    <fullName>CADMV_OperatorStreet__c</fullName>
    <label>Operator Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>