force-app/main/default/objects/BusinessLicenseApplication/fields/CADMV_OperatorZipcode__c.field-meta.xml
<CustomField>
    <fullName>CADMV_OperatorZipcode__c</fullName>
    <label>Operator Zip code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>