force-app/main/default/objects/BusinessLicenseApplication/fields/CADMV_PropertyOwnerFullName__c.field-meta.xml
<CustomField>
    <fullName>CADMV_PropertyOwnerFullName__c</fullName>
    <label>Property Owner&apos;s Full Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>