force-app/main/default/objects/BusinessLicenseApplication/fields/CADMV_PropertyStatus__c.field-meta.xml
<CustomField>
    <fullName>CADMV_PropertyStatus__c</fullName>
    <label>Property Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Leased</fullName>
            </value>
            <value>
                <fullName>Rented</fullName>
            </value>
            <value>
                <fullName>Owned</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>