force-app/main/default/objects/BusinessLicenseApplication/fields/CADMV_PropOwnerAddress__c.field-meta.xml
<CustomField>
    <fullName>CADMV_PropOwnerAddress__c</fullName>
    <formula>IF(NOT(ISBLANK(CADMV_PropOwnerStreet__c)),CADMV_PropOwnerStreet__c&amp; 
BR()
&amp;CADMV_PropOwnerCity__c&amp;&quot;, &quot;&amp;TEXT(CADMV_PropOwnerState__c)&amp;&quot; &quot;&amp;CADMV_PropOwnerZip__c,&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Property Owner&apos;s Address</label>
    <type>Text</type>
</CustomField>