force-app/main/default/objects/BusinessLicenseApplication/fields/CADMV_PropOwnerCity__c.field-meta.xml
<CustomField>
    <fullName>CADMV_PropOwnerCity__c</fullName>
    <label>Property Owner City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>