force-app/main/default/objects/BusinessLicenseApplication/fields/CADMV_PropOwnerStreet__c.field-meta.xml
<CustomField>
    <fullName>CADMV_PropOwnerStreet__c</fullName>
    <label>Property Owner Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>