force-app/main/default/objects/BusinessLicenseApplication/fields/CADMV_PropOwnerZip__c.field-meta.xml
<CustomField>
    <fullName>CADMV_PropOwnerZip__c</fullName>
    <label>Property Owner Zip Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>