force-app/main/default/objects/BusinessLicenseApplication/fields/CADMV_TotalArea__c.field-meta.xml
<CustomField>
    <fullName>CADMV_TotalArea__c</fullName>
    <formula>CADMV_BuildingArea__c  +  CADMV_DisplayArea__c  +  CADMV_OfficeArea__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Area</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>