force-app/main/default/objects/BusinessLicenseApplication/fields/CADMV_Visit__c.field-meta.xml
<CustomField>
    <fullName>CADMV_Visit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This lookup is used in the portal to allow applicants to manage their inspections.  DO NOT DELETE</description>
    <label>Latest Visit</label>
    <referenceTo>Visit</referenceTo>
    <relationshipLabel>Business License Applications</relationshipLabel>
    <relationshipName>LatestVisitBLA</relationshipName>
    <type>Lookup</type>
</CustomField>