force-app/main/default/objects/BusinessLicenseApplication/fields/Certificate_Proposed_Franchise_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Certificate_Proposed_Franchise_Agreement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Certificate Proposed Franchise Agreement</label>
    <type>Checkbox</type>
</CustomField>