force-app/main/default/objects/BusinessLicenseApplication/fields/Copy_of_Fictitous_Name__c.field-meta.xml
<CustomField>
    <fullName>Copy_of_Fictitous_Name__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Copy of Fictitous Name</label>
    <type>Checkbox</type>
</CustomField>