force-app/main/default/objects/BusinessLicenseApplication/fields/Course_is_complete__c.field-meta.xml
<CustomField>
    <fullName>Course_is_complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Course is complete</label>
    <type>Checkbox</type>
</CustomField>