force-app/main/default/objects/BusinessLicenseApplication/fields/Exam_is_complete__c.field-meta.xml
<CustomField>
    <fullName>Exam_is_complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exam is complete</label>
    <type>Checkbox</type>
</CustomField>