force-app/main/default/objects/BusinessLicenseApplication/fields/Family_Support__c.field-meta.xml
<CustomField>
    <fullName>Family_Support__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Family Support</label>
    <type>Checkbox</type>
</CustomField>