force-app/main/default/objects/BusinessLicenseApplication/fields/IF_CORP_LLC_Statement_Of_Information_SOS__c.field-meta.xml
<CustomField>
    <fullName>IF_CORP_LLC_Statement_Of_Information_SOS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IF CORP/LLC-Statement Of Information-SOS</label>
    <type>Checkbox</type>
</CustomField>