force-app/main/default/objects/BusinessLicenseApplication/fields/Inspection_failed_reasons__c.field-meta.xml
<CustomField>
    <fullName>Inspection_failed_reasons__c</fullName>
    <description>Reason need to added for  if inspection failed</description>
    <label>Inspection failed reasons</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Place of Business requirements not met</fullName>
            </value>
            <value>
                <fullName>Signs or devices on established Place of Business requirements not met</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>