force-app/main/default/objects/BusinessLicenseApplication/fields/Inspection_Scheduled_Status__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Scheduled_Status__c</fullName>
    <description>Stores info on if Inspection has been scheduled</description>
    <label>Inspection Scheduled Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>