force-app/main/default/objects/BusinessLicenseApplication/fields/Is_Autobroker_Endorsement__c.field-meta.xml
<CustomField>
    <fullName>Is_Autobroker_Endorsement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Autobroker Endorsement</label>
    <type>Checkbox</type>
</CustomField>