force-app/main/default/objects/BusinessLicenseApplication/fields/Is_Surety_Bond__c.field-meta.xml
<CustomField>
    <fullName>Is_Surety_Bond__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Surety Bond</label>
    <type>Checkbox</type>
</CustomField>