force-app/main/default/objects/BusinessLicenseApplication/fields/Letter_of_Authorization_new_trailer_only__c.field-meta.xml
<CustomField>
    <fullName>Letter_of_Authorization_new_trailer_only__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Letter of Authorization-new trailer only</label>
    <type>Checkbox</type>
</CustomField>