force-app/main/default/objects/BusinessLicenseApplication/fields/Live_Scan_Fingerprint_Request__c.field-meta.xml
<CustomField>
    <fullName>Live_Scan_Fingerprint_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Live Scan Fingerprint Request</label>
    <type>Checkbox</type>
</CustomField>