force-app/main/default/objects/BusinessLicenseApplication/fields/Live_Scan_Status__c.field-meta.xml
<CustomField>
    <fullName>Live_Scan_Status__c</fullName>
    <description>Stores Live Scan Status</description>
    <label>Live Scan Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>