force-app/main/default/objects/BusinessLicenseApplication/fields/Note_requirements_after_licensed__c.field-meta.xml
<CustomField>
    <fullName>Note_requirements_after_licensed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Note:requirements after licensed</label>
    <type>Checkbox</type>
</CustomField>