force-app/main/default/objects/BusinessLicenseApplication/fields/Number_New_Motor_Vehicle_Board_Locations__c.field-meta.xml
<CustomField>
    <fullName>Number_New_Motor_Vehicle_Board_Locations__c</fullName>
    <label>Number New Motor Vehicle Board Locations</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>