force-app/main/default/objects/BusinessLicenseApplication/fields/Number_of_Exam_Attempts__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Exam_Attempts__c</fullName>
    <label>Number of Exam Attempts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>