force-app/main/default/objects/BusinessLicenseApplication/fields/Number_Of_Fingerprint_Cards__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Fingerprint_Cards__c</fullName>
    <label>Number Of Fingerprint Cards</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>