force-app/main/default/objects/BusinessLicenseApplication/fields/Number_of_Motorcycle_Plates__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Motorcycle_Plates__c</fullName>
    <label>Number of Motorcycle Plates</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>