force-app/main/default/objects/BusinessLicenseApplication/fields/Photograph_of_Business_Location__c.field-meta.xml
<CustomField>
    <fullName>Photograph_of_Business_Location__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Photograph of Business Location</label>
    <type>Checkbox</type>
</CustomField>