force-app/main/default/objects/BusinessLicenseApplication/fields/Principal_Authorization_date__c.field-meta.xml
<CustomField>
    <fullName>Principal_Authorization_date__c</fullName>
    <label>Principal&apos;s Authorization date</label>
    <type>Date</type>
</CustomField>