force-app/main/default/objects/BusinessLicenseApplication/fields/Principal_Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Principal_Date_of_Birth__c</fullName>
    <label>Principal&apos;s Date of Birth</label>
    <type>Date</type>
</CustomField>