force-app/main/default/objects/BusinessLicenseApplication/fields/Principal_Name__c.field-meta.xml
<CustomField>
    <fullName>Principal_Name__c</fullName>
    <label>Principal&apos;s True Full Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>