force-app/main/default/objects/BusinessLicenseApplication/fields/Property_Details__c.field-meta.xml
<CustomField>
    <fullName>Property_Details__c</fullName>
    <label>Property Details</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Start</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>