force-app/main/default/objects/BusinessLicenseApplication/fields/Review_Process__c.field-meta.xml
<CustomField>
    <fullName>Review_Process__c</fullName>
    <label>Review Process</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Start</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>