force-app/main/default/objects/BusinessLicenseApplication/fields/Schedule_Your_Dealer_Exam__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Your_Dealer_Exam__c</fullName>
    <label>Schedule Your Dealer Exam</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Start</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>