force-app/main/default/objects/BusinessLicenseApplication/fields/Schedule_Your_Inspection__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Your_Inspection__c</fullName>
    <label>Schedule Your Inspection</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Start</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>