force-app/main/default/objects/BusinessLicenseApplication/fields/Schedule_your_Live_Scan__c.field-meta.xml
<CustomField>
    <fullName>Schedule_your_Live_Scan__c</fullName>
    <label>Schedule your Live Scan</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Start</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>