force-app/main/default/objects/BusinessLicenseApplication/fields/State_Board_Equalization_Resale_Permit__c.field-meta.xml
<CustomField>
    <fullName>State_Board_Equalization_Resale_Permit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>State Board Equalization Resale Permit</label>
    <type>Checkbox</type>
</CustomField>