force-app/main/default/objects/BusinessLicenseApplication/fields/Submission_Payment_Deadline_Missed__c.field-meta.xml
<CustomField>
    <fullName>Submission_Payment_Deadline_Missed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Submission Payment Deadline Missed</label>
    <type>Checkbox</type>
</CustomField>