force-app/main/default/objects/BusinessLicenseApplication/fields/Surety_Bond__c.field-meta.xml
<CustomField>
    <fullName>Surety_Bond__c</fullName>
    <label>Surety Bond</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Start</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>