force-app/main/default/objects/BusinessLicenseApplication/fields/Upload_Your_Required_Documents__c.field-meta.xml
<CustomField>
    <fullName>Upload_Your_Required_Documents__c</fullName>
    <label>Upload Your Required Documents</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Start</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>